--- a/CiderAndCode.Web/CiderAndCode.Web.csproj
+++ b/CiderAndCode.Web/CiderAndCode.Web.csproj
@@ -195,9 +195,13 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\appconfig.js" />
+    <Content Include="app\controllers\Ciders\listCiderController.js" />
+    <Content Include="app\controllers\Ciders\makeCiderController.js" />
     <Content Include="app\controllers\ListBushels\listBushelsController.js" />
     <Content Include="app\controllers\PickApples\pickApplesController.js" />
     <Content Include="app\views\Bushels\listBushels.html" />
+    <Content Include="app\views\Ciders\listCiders.html" />
+    <Content Include="app\views\Ciders\makeCider.html" />
     <Content Include="app\views\PickApples\pickApples.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
